[gd_scene load_steps=2 format=3]

[ext_resource type="Script" uid="uid://bvkmx3yc2g0qi" path="res://addons/performance_monitor/performance_panel.gd" id="1_panel"]

[node name="PerformancePanel" type="Control"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Toolbar" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FilterLabel" type="Label" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Filter:"

[node name="FilterOption" type="OptionButton" parent="VBoxContainer/Toolbar"]
layout_mode = 2
size_flags_horizontal = 0

[node name="ClearButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Clear"

[node name="Sep1" type="VSeparator" parent="VBoxContainer/Toolbar"]
layout_mode = 2

[node name="FrameTimeLabel" type="Label" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Frame:"

[node name="FrameTimeSpinBox" type="SpinBox" parent="VBoxContainer/Toolbar"]
layout_mode = 2
min_value = 1.0
max_value = 200.0
step = 1.0
value = 20.0
suffix = "ms"

[node name="Sep2" type="VSeparator" parent="VBoxContainer/Toolbar"]
layout_mode = 2

[node name="ChunkLabel" type="Label" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Chunk:"

[node name="ChunkSpinBox" type="SpinBox" parent="VBoxContainer/Toolbar"]
layout_mode = 2
min_value = 0.1
max_value = 50.0
step = 0.1
value = 3.0
suffix = "ms"

[node name="Sep3" type="VSeparator" parent="VBoxContainer/Toolbar"]
layout_mode = 2

[node name="VegLabel" type="Label" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Veg:"

[node name="VegSpinBox" type="SpinBox" parent="VBoxContainer/Toolbar"]
layout_mode = 2
min_value = 0.1
max_value = 50.0
step = 0.1
value = 2.0
suffix = "ms"

[node name="ResetButton" type="Button" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Reset"

[node name="Spacer" type="Control" parent="VBoxContainer/Toolbar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SpikeCountLabel" type="Label" parent="VBoxContainer/Toolbar"]
layout_mode = 2
text = "Spikes: 0"

[node name="LogList" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
selection_enabled = true
